# EmbodiedGen

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  README.md  acknowledgement.html  index.html  install.html  install.sh  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  style.css
.github/workflows/: deploy_docs.yml
acknowledgement/: index.html
api/: data.html  envs.html  index.html  models.html  trainer.html  utils.html  validators.html
api/data/: index.html
api/envs/: index.html
api/models/: index.html
api/trainer/: index.html
api/utils/: index.html
api/validators/: index.html
apps/: app_style.py  common.py  hunyuan_image3d_save.py  hunyuan_image3d_submit.py  hunyuan_text3d_submit.py  image_to_3d.py  image_to_3d_api.py  text_to_3d.py  text_to_3d_api.py  texture_edit.py  visualize_asset.py
assets/models/: assets.json  basket_afford.glb  decoration_collision.glb  ear_hear.glb  ear_hear_afford.glb  glasses_collision.glb  glue_stick_collision.glb  ingredients_afford.glb  knife.glb  office_tools_afford.glb  repair_tools.glb  (+5 more)
docker/: Dockerfile.rocm  README.md  README.rocm.md  install_rocm.sh
docs/: 404.html  acknowledgement.html  acknowledgement.md  index.html  index.md  install.html  install.md  objects.inv  sitemap.xml
install/: index.html  init_submodules.sh  install_affordance.sh  install_agent_plugin.sh  install_basic.sh  install_cu126.sh  install_extra.sh  install_room.sh  install_scene3d.sh
search/: search_index.json
services/: image_to_3d.html  index.html  text_to_3d.html  texture_edit.html  visualize_asset.html
tutorials/: any_simulators.html  articulated_gen.html  digital_twin.html  gym_env.html  image_to_3d.html  index.html  layout_gen.html  scene_gen.html  text_to_3d.html  texture_edit.html
(+251 files in other folders)
